Added in command-line support again

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Compile Include="Configuration\Builders\ControlServiceBuilder.cs" />
     <Compile Include="Configuration\Builders\DelegateServiceBuilder.cs" />
+    <Compile Include="Configuration\Builders\EnvironmentBuilder.cs" />
     <Compile Include="Configuration\Builders\EventCallbackList.cs" />
     <Compile Include="Configuration\Builders\HelpBuilder.cs" />
     <Compile Include="Configuration\Builders\HostBuilder.cs" />
@@ -52,6 +53,31 @@
     <Compile Include="Configuration\Builders\StartBuilder.cs" />
     <Compile Include="Configuration\Builders\StopBuilder.cs" />
     <Compile Include="Configuration\Builders\UninstallBuilder.cs" />
+    <Compile Include="Configuration\CommandLineParser\AbstractCharacterParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\AbstractParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\ArgumentElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\CommandLine.cs" />
+    <Compile Include="Configuration\CommandLineParser\CommandLineElementParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\CommandLineParseException.cs" />
+    <Compile Include="Configuration\CommandLineParser\DefinitionElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\ExtensionForCommandLineElementParsers.cs" />
+    <Compile Include="Configuration\CommandLineParser\IArgumentElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\ICommandLineElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\ICommandLineElementParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\ICommandLineParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\IDefinitionElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\IInitializeParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\ISwitchElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\ITokenElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\MonadicCommandLineParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\MonadParserExtensions.cs" />
+    <Compile Include="Configuration\CommandLineParser\Parser.cs" />
+    <Compile Include="Configuration\CommandLineParser\Result.cs" />
+    <Compile Include="Configuration\CommandLineParser\StringCommandLineParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\SwitchElement.cs" />
+    <Compile Include="Configuration\CommandLineParser\TextCommandLineParser.cs" />
+    <Compile Include="Configuration\CommandLineParser\TokenElement.cs" />
+    <Compile Include="Configuration\HostConfigurators\CommandLineConfigurator.cs" />
     <Compile Include="Configuration\Configurators\ConfigurationResult.cs" />
     <Compile Include="Configuration\Configurators\ValidateConfigurationResult.cs" />
     <Compile Include="Configuration\Configurators\Configurator.cs" />
@@ -63,6 +89,7 @@
     <Compile Include="Configuration\Credentials.cs" />
     <Compile Include="Configuration\DependencyExtensions.cs" />
     <Compile Include="Configuration\HostConfigurators\DependencyHostConfigurator.cs" />
+    <Compile Include="Configuration\HostConfigurators\EnvironmentBuilderFactory.cs" />
     <Compile Include="Configuration\HostConfigurators\HostBuilderConfigurator.cs" />
     <Compile Include="Configuration\HostConfigurators\HostBuilderFactory.cs" />
     <Compile Include="Configuration\HostConfigurators\HostConfigurator.cs" />
@@ -76,6 +103,23 @@
     <Compile Include="Configuration\HostConfigurators\StartModeHostConfigurator.cs" />
     <Compile Include="Configuration\HostConfigurators\SudoConfigurator.cs" />
     <Compile Include="Configuration\HostConfigurators\UninstallHostConfiguratorAction.cs" />
+    <Compile Include="Configuration\Options\AutostartOption.cs" />
+    <Compile Include="Configuration\Options\DisplayNameOption.cs" />
+    <Compile Include="Configuration\Options\HelpOption.cs" />
+    <Compile Include="Configuration\Options\InstallOption.cs" />
+    <Compile Include="Configuration\Options\InstanceOption.cs" />
+    <Compile Include="Configuration\Options\InteractiveOption.cs" />
+    <Compile Include="Configuration\Options\LocalServiceOption.cs" />
+    <Compile Include="Configuration\Options\NetworkServiceOption.cs" />
+    <Compile Include="Configuration\Options\Option.cs" />
+    <Compile Include="Configuration\Options\RunOption.cs" />
+    <Compile Include="Configuration\Options\ServiceAccountOption.cs" />
+    <Compile Include="Configuration\Options\ServiceDescriptionOption.cs" />
+    <Compile Include="Configuration\Options\ServiceNameOption.cs" />
+    <Compile Include="Configuration\Options\StartOption.cs" />
+    <Compile Include="Configuration\Options\StopOption.cs" />
+    <Compile Include="Configuration\Options\SudoOption.cs" />
+    <Compile Include="Configuration\Options\UninstallOption.cs" />
     <Compile Include="Configuration\ServiceConfiguratorExtensions.cs" />
     <Compile Include="Exceptions\ServiceBuilderException.cs" />
     <Compile Include="Exceptions\ServiceControlException.cs" />
@@ -120,6 +164,7 @@
     <Compile Include="Runtime\Windows\ServiceRecoveryAction.cs" />
     <Compile Include="Runtime\Windows\ServiceRecoveryOptions.cs" />
     <Compile Include="Runtime\Windows\WindowsHostEnvironment.cs" />
+    <Compile Include="Runtime\Windows\WindowsHostEnvironmentBuilder.cs" />
     <Compile Include="Runtime\Windows\WindowsServiceControlManager.cs" />
     <Compile Include="Runtime\Windows\WindowsServiceHost.cs">
       <SubType>Component</SubType>
