Continuing to cleanup the service

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -53,29 +53,23 @@
     <Compile Include="Configuration\Builders\StartBuilder.cs" />
     <Compile Include="Configuration\Builders\StopBuilder.cs" />
     <Compile Include="Configuration\Builders\UninstallBuilder.cs" />
-    <Compile Include="Configuration\CommandLineParser\AbstractCharacterParser.cs" />
     <Compile Include="Configuration\CommandLineParser\AbstractParser.cs" />
     <Compile Include="Configuration\CommandLineParser\ArgumentElement.cs" />
     <Compile Include="Configuration\CommandLineParser\CommandLine.cs" />
     <Compile Include="Configuration\CommandLineParser\CommandLineElementParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\CommandLineParseException.cs" />
     <Compile Include="Configuration\CommandLineParser\DefinitionElement.cs" />
     <Compile Include="Configuration\CommandLineParser\ExtensionForCommandLineElementParsers.cs" />
     <Compile Include="Configuration\CommandLineParser\IArgumentElement.cs" />
     <Compile Include="Configuration\CommandLineParser\ICommandLineElement.cs" />
     <Compile Include="Configuration\CommandLineParser\ICommandLineElementParser.cs" />
-    <Compile Include="Configuration\CommandLineParser\ICommandLineParser.cs" />
     <Compile Include="Configuration\CommandLineParser\IDefinitionElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\IInitializeParser.cs" />
     <Compile Include="Configuration\CommandLineParser\ISwitchElement.cs" />
     <Compile Include="Configuration\CommandLineParser\ITokenElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\MonadicCommandLineParser.cs" />
     <Compile Include="Configuration\CommandLineParser\MonadParserExtensions.cs" />
     <Compile Include="Configuration\CommandLineParser\Parser.cs" />
     <Compile Include="Configuration\CommandLineParser\Result.cs" />
     <Compile Include="Configuration\CommandLineParser\StringCommandLineParser.cs" />
     <Compile Include="Configuration\CommandLineParser\SwitchElement.cs" />
-    <Compile Include="Configuration\CommandLineParser\TextCommandLineParser.cs" />
     <Compile Include="Configuration\CommandLineParser\TokenElement.cs" />
     <Compile Include="Configuration\HostConfigurators\CommandLineConfigurator.cs" />
     <Compile Include="Configuration\Configurators\ConfigurationResult.cs" />
@@ -147,6 +141,7 @@
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\LogLevel.cs" />
     <Compile Include="Logging\LogOutputProvider.cs" />
+    <Compile Include="Logging\TopshelfConsoleTraceListener.cs" />
     <Compile Include="Logging\TraceLog.cs" />
     <Compile Include="Logging\TraceLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
