Updated build for .NET 3.5/.NET 4.0 compatibility and several other things

--- a/src/SampleTopshelfService/SampleTopshelfService.csproj
+++ b/src/SampleTopshelfService/SampleTopshelfService.csproj
@@ -72,8 +72,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SolutionVersion.cs">
+      <Link>SolutionVersion.cs</Link>
+    </Compile>
     <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +83,9 @@
       <Project>{A52AD64D-6455-4A22-8CCF-581851086578}</Project>
       <Name>Topshelf</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
