Added logging integrations, verified service behavior under control

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -148,14 +148,14 @@
     <Compile Include="Hosts\StartHost.cs" />
     <Compile Include="Hosts\StopHost.cs" />
     <Compile Include="Hosts\UninstallHost.cs" />
-    <Compile Include="Logging\Log.cs" />
-    <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Logging\LogLevel.cs" />
-    <Compile Include="Logging\LogOutputProvider.cs" />
+    <Compile Include="Logging\LogWriter.cs" />
+    <Compile Include="Logging\LogWriterFactory.cs" />
+    <Compile Include="Logging\HostLogger.cs" />
+    <Compile Include="Logging\LoggingLevel.cs" />
+    <Compile Include="Logging\LogWriterOutputProvider.cs" />
     <Compile Include="Logging\TopshelfConsoleTraceListener.cs" />
-    <Compile Include="Logging\TraceLog.cs" />
-    <Compile Include="Logging\TraceLogger.cs" />
+    <Compile Include="Logging\TraceLogWriter.cs" />
+    <Compile Include="Logging\TraceLogWriterFactory.cs" />
     <Compile Include="Runtime\HostEnvironment.cs" />
     <Compile Include="Runtime\HostStartMode.cs" />
     <Compile Include="Runtime\InstallHostSettings.cs" />
