--- a/src/Topshelf.Tests/packages.config
+++ b/src/Topshelf.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="NUnit" version="2.6.0.12054" targetFramework="net40" />
+  <package id="NUnit" version="2.6.1" targetFramework="net40" />
+  <package id="NUnit.Runners" version="2.6.1" />
 </packages>
