--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -180,6 +180,7 @@
     </Compile>
     <Compile Include="Runtime\Windows\WindowsUserAccessControl.cs" />
     <Compile Include="ServiceControl.cs" />
+    <Compile Include="ServiceShutdown.cs" />
     <Compile Include="TopshelfExitCode.cs" />
   </ItemGroup>
   <ItemGroup>
