--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -48,18 +48,14 @@
     <Compile Include="Configuration\Builders\ControlServiceBuilder.cs" />
     <Compile Include="Configuration\Builders\DelegateServiceBuilder.cs" />
     <Compile Include="Configuration\Builders\EnvironmentBuilder.cs" />
-    <Compile Include="Configuration\Builders\EventCallbackList.cs" />
     <Compile Include="Configuration\Builders\HelpBuilder.cs" />
     <Compile Include="Configuration\Builders\HostBuilder.cs" />
-    <Compile Include="Configuration\Builders\HostStartContext.cs" />
-    <Compile Include="Configuration\Builders\HostStartedContext.cs" />
-    <Compile Include="Configuration\Builders\HostStopContext.cs" />
-    <Compile Include="Configuration\Builders\HostStoppedContext.cs" />
     <Compile Include="Configuration\Builders\InstallBuilder.cs" />
     <Compile Include="Configuration\Builders\RunBuilder.cs" />
     <Compile Include="Configuration\Builders\ServiceBuilder.cs" />
     <Compile Include="Configuration\Builders\StartBuilder.cs" />
     <Compile Include="Configuration\Builders\StopBuilder.cs" />
+    <Compile Include="Configuration\Builders\TestBuilder.cs" />
     <Compile Include="Configuration\Builders\UninstallBuilder.cs" />
     <Compile Include="Configuration\CommandLineParser\AbstractParser.cs" />
     <Compile Include="Configuration\CommandLineParser\ArgumentElement.cs" />
@@ -136,12 +132,15 @@
     <Compile Include="Configuration\Options\UninstallOption.cs" />
     <Compile Include="Configuration\Options\UnknownOption.cs" />
     <Compile Include="Configuration\ServiceConfiguratorExtensions.cs" />
+    <Compile Include="Configuration\ServiceConfigurators\ControlServiceConfigurator.cs" />
+    <Compile Include="Configuration\ServiceConfigurators\ServiceConfiguratorBase.cs" />
     <Compile Include="Configuration\ServiceRecoveryConfigurator.cs" />
     <Compile Include="Configuration\ServiceRecoveryConfiguratorExtensions.cs" />
+    <Compile Include="Configuration\TestHostExtensions.cs" />
     <Compile Include="Exceptions\ServiceBuilderException.cs" />
     <Compile Include="Exceptions\ServiceControlException.cs" />
     <Compile Include="HostFactory.cs" />
-    <Compile Include="Configuration\RunHostConfiguratorExtensions.cs" />
+    <Compile Include="Configuration\ServiceEventConfiguratorExtensions.cs" />
     <Compile Include="Configuration\InstallHostConfiguratorExtensions.cs" />
     <Compile Include="Configuration\RunAsExtensions.cs" />
     <Compile Include="Configuration\ServiceConfigurators\ServiceConfigurator.cs" />
@@ -153,11 +152,16 @@
     <Compile Include="Exceptions\TopshelfException.cs" />
     <Compile Include="Host.cs" />
     <Compile Include="HostControl.cs" />
+    <Compile Include="HostStartContext.cs" />
+    <Compile Include="HostStartedContext.cs" />
+    <Compile Include="HostStopContext.cs" />
+    <Compile Include="HostStoppedContext.cs" />
     <Compile Include="Hosts\ConsoleRunHost.cs" />
     <Compile Include="Hosts\HelpHost.cs" />
     <Compile Include="Hosts\InstallHost.cs" />
     <Compile Include="Hosts\StartHost.cs" />
     <Compile Include="Hosts\StopHost.cs" />
+    <Compile Include="Hosts\TestHost.cs" />
     <Compile Include="Hosts\UninstallHost.cs" />
     <Compile Include="Logging\HostLoggerConfigurator.cs" />
     <Compile Include="Logging\LogWriter.cs" />
@@ -169,10 +173,13 @@
     <Compile Include="Logging\TraceHostLoggerConfigurator.cs" />
     <Compile Include="Logging\TraceLogWriter.cs" />
     <Compile Include="Logging\TraceLogWriterFactory.cs" />
+    <Compile Include="Runtime\EventCallbackList.cs" />
     <Compile Include="Runtime\HostEnvironment.cs" />
     <Compile Include="Runtime\HostStartMode.cs" />
     <Compile Include="Runtime\InstallHostSettings.cs" />
     <Compile Include="Runtime\HostSettings.cs" />
+    <Compile Include="Runtime\ServiceEvents.cs" />
+    <Compile Include="Runtime\ServiceEventsImpl.cs" />
     <Compile Include="Runtime\ServiceFactory.cs" />
     <Compile Include="Runtime\ServiceHandle.cs" />
     <Compile Include="Runtime\Windows\HostInstaller.cs">
