--- a/src/Topshelf.Tests/Topshelf.Tests.csproj
+++ b/src/Topshelf.Tests/Topshelf.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="BeforeStart_Specs.cs" />
     <Compile Include="CommandLine_Specs.cs" />
     <Compile Include="Help_Specs.cs" />
     <Compile Include="ServiceEvent_Specs.cs" />
