--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -205,8 +205,11 @@
     </Compile>
     <Compile Include="Runtime\Windows\WindowsUserAccessControl.cs" />
     <Compile Include="ServiceControl.cs" />
+    <Compile Include="ServiceSessionChange.cs" />
     <Compile Include="ServiceShutdown.cs" />
     <Compile Include="ServiceSuspend.cs" />
+    <Compile Include="SessionChangedArguments.cs" />
+    <Compile Include="SessionChangeReasonCode.cs" />
     <Compile Include="TopshelfExitCode.cs" />
   </ItemGroup>
   <ItemGroup>
