--- a/src/SampleTopshelfService/app.config
+++ b/src/SampleTopshelfService/app.config
@@ -3,7 +3,7 @@
   <configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
 	</configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" /></startup><log4net>
+  <log4net>
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
@@ -13,4 +13,5 @@
 			<level value="INFO" />
 			<appender-ref ref="ConsoleAppender" />
 		</root>
-	</log4net></configuration>
+	</log4net>
+</configuration>
