--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -205,6 +205,7 @@
     </Compile>
     <Compile Include="Runtime\Windows\WindowsUserAccessControl.cs" />
     <Compile Include="ServiceControl.cs" />
+    <Compile Include="ServiceCustomCommand.cs" />
     <Compile Include="ServiceSessionChange.cs" />
     <Compile Include="ServiceShutdown.cs" />
     <Compile Include="ServiceSuspend.cs" />
