Command-line option to install as Local System
Added the ability to install the service using the Local System account
from the command-line.
This also requires an update to the docs at:
http://topshelf.readthedocs.org/en/latest/overview/commandline.html to
include the new parameter.

--- a/src/Topshelf/Topshelf.csproj
+++ b/src/Topshelf/Topshelf.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Configuration\HostConfigurators\UnknownCommandLineOptionHostConfigurator.cs" />
     <Compile Include="Configuration\Options\AutostartOption.cs" />
     <Compile Include="Configuration\Options\CommandOption.cs" />
+    <Compile Include="Configuration\Options\LocalSystemOption.cs" />
     <Compile Include="Configuration\Options\DelayedOption.cs" />
     <Compile Include="Configuration\Options\DisabledOption.cs" />
     <Compile Include="Configuration\Options\DisplayNameOption.cs" />
