Add sanity check for null WebProxy in NuGet.targets

--- a/src/.nuget/NuGet.targets
+++ b/src/.nuget/NuGet.targets
@@ -128,9 +128,12 @@
                     OutputFilename = Path.GetFullPath(OutputFilename);
 
                     Log.LogMessage("Downloading latest version of NuGet.exe...");
-                    WebClient webClient = new WebClient();
+                    WebClient webClient = new WebClient();                    
                     webClient.Proxy = WebRequest.DefaultWebProxy;
-                    webClient.Proxy.Credentials = CredentialCache.DefaultCredentials;
+                    
+                    if(webClient.Proxy != null) {
+                        webClient.Proxy.Credentials = CredentialCache.DefaultCredentials;
+                    }
 
                     webClient.DownloadFile("https://www.nuget.org/nuget.exe", OutputFilename);
 
